# data-visualizer

./: .gitignore  README.md  com.github.towk.DataAnalyzer.json  main.py  meson.build
data/: com.github.towk.DataAnalyzer.desktop.in  com.github.towk.DataAnalyzer.gschema.xml  com.github.towk.DataAnalyzer.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: datavisualizer.gresource.xml  datavisualizer.in  main.py  meson.build  window.py  window.ui
